<resources>
    <string name="app_name">AddEvent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_addevent">AddEvent</string>
    <string name="menu_myevents">MyEvents</string>
    <string name="menu_history">History</string>
    <string name="menu_products">Products</string>
    <string name="menu_places">Places</string>
    <string name="menu_achievements">Achievements</string>
    <string name="additional">Additional</string>
</resources>
